<resources>
    <string name="app_name">SAFDemo</string>
    <string name="action_settings">Settings</string>

    <string name="saf">SAF介绍</string>
    <string name="general_anno">通用注解</string>
    <string name="eventbus">Event Bus</string>
    <string name="imageloader">图片加载</string>
    <string name="sqlite">Sqlite ORM</string>
    <string name="router">Router</string>
    <string name="cache">Cache</string>
    <string name="log">日志框架L</string>

    <string name="finish_by_back_again">再按一次退出程序</string>
</resources>
