<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_saf"
            android:checked="true"
            android:icon="@drawable/menu_safinfo"
            android:title="@string/saf"/>

        <item
            android:id="@+id/drawer_anno"
            android:icon="@drawable/menu_general_anno"
            android:title="@string/general_anno"/>

        <item
        android:id="@+id/drawer_eventbus"
        android:icon="@drawable/menu_eventbus"
        android:title="@string/eventbus"/>

        <item
            android:id="@+id/drawer_imageloader"
            android:icon="@drawable/menu_imageloader"
            android:title="@string/imageloader"/>

        <item
            android:id="@+id/drawer_sqlite"
            android:icon="@drawable/menu_sqlite_orm"
            android:title="@string/sqlite"/>


        <item
            android:id="@+id/drawer_router"
            android:icon="@drawable/menu_router"
            android:title="@string/router"/>

        <item
            android:id="@+id/drawer_cache"
            android:icon="@drawable/menu_cache"
            android:title="@string/cache"/>

        <item
            android:id="@+id/drawer_log"
            android:icon="@drawable/menu_log"
            android:title="@string/log"/>

    </group>
</menu>